Collection API Улучшения[#101880]