@@ -2,8 +2,6 @@ package user;
 
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -17,12 +15,12 @@ public class UserConvertTest {
         User user1 = new User(1, "Ivan", "Moscow");
         User user2 = new User(2, "Vovan", "Moscow");
         User user3 = new User(3, "Tolyan", "Moscow");
-        List<User> users = Arrays.asList(user1, user2, user3);
+        List<User> users = List.of(user1, user2, user3);
         Map<Integer, User> actual = new UserConvert().process(users);
-        Map<Integer, User> expetced = new HashMap<>();
-        expetced.put(1, user1);
-        expetced.put(2, user2);
-        expetced.put(3, user3);
+        Map<Integer, User> expetced = Map.of(
+        1, user1,
+        2, user2,
+        3, user3);
         assertThat(actual, is(expetced));
     }
 }
